--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
@@ -765,7 +765,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 #call-to-action {
   background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.9)),
-    url(/img/clients/Rectangle\ 144.png) fixed center center;
+    url(/bizpage-master/img/clients/Rectangle\ 144.png) fixed center center;
   position: relative;
   background-size: cover;
   padding: 60px 0;
@@ -1345,7 +1345,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 #footer {
   background: #000;
-  padding: 0 0 30px 0;
   color: #eee;
   font-size: 14px;
 }
@@ -1500,4 +1499,26 @@ body.mobile-nav-active #mobile-nav-toggle {
   text-align: center;
   font-size: 13px;
   color: #ddd;
+}
+
+.container {
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.text-block2 {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.containerpop {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
