--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
@@ -765,15 +765,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 #call-to-action {
   background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.9)),
-<<<<<<< HEAD
     url(/bizpage-master/img/clients/Rectangle\ 144.png) fixed center center;
-=======
-    url(/Frontend/FrontOffice/bizpage-master/bizpage-master/img/clients/Rectangle\ 144.png)
-      fixed center center;
->>>>>>> 0a5c34d23a69f6c8704496ca83c711b77087118d
   position: relative;
   background-size: cover;
-  padding: 60px 0;
+  padding: 60px;
 }
 
 #call-to-action h3 {
