--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
@@ -360,7 +360,7 @@ h6 {
   color: #fff;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
-  font-size: 13px;
+  font-size: 14px;
   text-transform: uppercase;
   outline: none;
 }
@@ -765,7 +765,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------*/
 #call-to-action {
   background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.9)),
-    url(/bizpage-master/img/clients/Rectangle\ 144.png) fixed center center;
+    url(/FrontOffice/bizpage-master/bizpage-master/img/clients/Rectangle\ 144.png)
+      fixed center center;
   position: relative;
   background-size: cover;
   padding: 60px;
