--- a/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
+++ b/Frontend/FrontOffice/bizpage-master/bizpage-master/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #18d26e;
+  color: #132453;
   transition: 0.5s;
 }
 
@@ -1072,46 +1072,46 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /* Testimonials Section
 --------------------------------*/
-#testimonials {
+#aplicacao {
   padding: 60px 0;
 }
 
-#testimonials .section-header {
+#aplicacao .section-header {
   margin-bottom: 40px;
 }
 
-#testimonials .testimonial-item {
+#aplicacao .testimonial-item {
   text-align: center;
 }
 
-#testimonials .testimonial-item .testimonial-img {
+#aplicacao .testimonial-item .testimonial-img {
   width: 500px;
   border-radius: 50%;
   border: 4px solid #fff;
   margin: 0 auto;
 }
 
-#testimonials .testimonial-item h3 {
+#aplicacao .testimonial-item h3 {
   font-size: 20px;
   font-weight: bold;
   margin: 10px 0 5px 0;
   color: #132453;
 }
 
-#testimonials .testimonial-item h4 {
+#aplicacao .testimonial-item h4 {
   font-size: 14px;
   color: #999;
   margin: 0 0 15px 0;
 }
 
-#testimonials .testimonial-item .quote-sign-left {
+#aplicacao .testimonial-item .quote-sign-left {
   margin-top: -15px;
   padding-right: 10px;
   display: inline-block;
   width: 37px;
 }
 
-#testimonials .testimonial-item .quote-sign-right {
+#aplicacao .testimonial-item .quote-sign-right {
   margin-bottom: -15px;
   padding-left: 10px;
   display: inline-block;
@@ -1119,25 +1119,25 @@ body.mobile-nav-active #mobile-nav-toggle {
   width: 37px;
 }
 
-#testimonials .testimonial-item p {
+#aplicacao .testimonial-item p {
   font-style: italic;
   margin: 0 auto 15px auto;
   font-size: 20px;
 }
 
 @media (min-width: 992px) {
-  #testimonials .testimonial-item p {
+  #aplicacao .testimonial-item p {
     width: 80%;
   }
 }
 
-#testimonials .owl-nav,
-#testimonials .owl-dots {
+#aplicacao .owl-nav,
+#aplicacao .owl-dots {
   margin-top: 5px;
   text-align: center;
 }
 
-#testimonials .owl-dot {
+#aplicacao .owl-dot {
   display: inline-block;
   margin: 0 5px;
   width: 12px;
@@ -1146,7 +1146,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-color: #ddd;
 }
 
-#testimonials .owl-dot.active {
+#aplicacao .owl-dot.active {
   background-color: #132453;
 }
 
